# stopwatch

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  cli.py  openrouter_test.py  pyproject.toml  pytest.ini  requirements.txt  run_benchmark.py
.github/workflows/: main.yml
benchmarks/: many-benchmarks.yaml  vllm-profiler.yaml  vllm-v1-engine.yaml
cli/: disagg_prefill_proxy_server.py  run_benchmark.py  run_benchmark_suite.py  run_profiler.py
configs/: data-distributions.yaml  full-suite.yaml  llama-8b-fp8-vllm-tune.yaml  llama-8b-tensorrt-tune.yaml  llama-8b-vllm-tune.yaml  llama3.yaml  more-gpus.yaml  region-test.yaml  sglang.yaml  tensorrt-llm.yaml  trtllm-engine.yaml  vllm-args.yaml  vllm-profiler.yaml  vllm-v1-engine.yaml  vllm.yaml  zeta-vllm-ootb.yaml  zeta-vllm-tune.yaml  zeta.yaml
configs/getting-started/: README.md  llama3-8xh100-vllm.yaml  llama3-8xh100.yaml  llama3-data-configs.yaml  llama3-vllm-sglang.yaml  llama3.yaml
configs/samples/: deepseek.yaml  llama3.yaml  structured-outputs.yaml  warmup.yaml
configs/sglang/: all.yaml  deepseek-awq.yaml  deepseek.yaml  gemma3.yaml  llama3.yaml  mistral.yaml  qwen.yaml  zeta.yaml
configs/tensorrt-llm/: all.yaml  deepseek.yaml  llama3-short-low-latency.yaml  llama3-short-throughput.yaml  llama3.yaml  mistral.yaml  qwen3-06.yaml  zeta.yaml
configs/tokasaurus/: all.yaml  llama3.yaml
configs/vllm/: all.yaml  deepseek-awq.yaml  deepseek.yaml  gemma-3-1b.yaml  gemma3.yaml  gpt-oss.yaml  llama3-1b.yaml  llama3.yaml  mistral.yaml  qwen.yaml  qwen3-06b.yaml  zeta.yaml
datasette/: events.py  hookspecs.py  permissions.py  version.py
src/stopwatch/: __main__.py  benchmark.py  constants.py  datasette_runner.py  etl.py  profile.py  resources.py  run_benchmark.py  run_benchmark_suite.py  run_profiler.py
src/stopwatch/benchmark/: __init__.py  dynamic.py  guidellm.py
src/stopwatch/cli/: __init__.py  benchmark.py  profile.py  provision.py  provision_and_benchmark.py  run_benchmark.py  run_benchmark_suite.py  run_profiler.py  utils.py
src/stopwatch/custom_metrics/: vllm.py
src/stopwatch/db/: __init__.py  benchmark.py
src/stopwatch/llm_servers/: __init__.py  constants.py  dynamic.py  llm_server.py  sglang.py  tensorrt_llm.py  tokasaurus.py  vllm.py  vllm_pd_disaggregation.py
src/stopwatch/utils/: __init__.py  loader.py  openai.py
src/web/: __init__.py  datasette_runner.py  etl.py  resources.py  transforms.py
stopwatch/: __init__.py  async_utils.py  benchmark.py  constants.py  datasette_runner.py  etl.py  generate_figure.py  llm_server.py  resources.py  run_benchmark.py  run_benchmark_suite.py  run_many_benchmarks.py  run_profiler.py  sglang_runner.py  tensorrt_llm_runner.py  tensorrt_llm_with_triton_runner.py  tokasaurus_runner.py  transforms.py  trtllm_runner.py  vllm_deployment.jinja  vllm_disagg_prefill_runner.py  vllm_runner.py
stopwatch/custom_metrics/: __init__.py  histogram.py  vllm.py
stopwatch/db/: __init__.py  benchmark.py  db.py
stopwatch/llm_servers/: __init__.py  llm_server.py  sglang.py  tensorrt_llm.py  tokasaurus.py  vllm.py  vllm_pd_disaggregation.py
tests/e2e/: test_structured_outputs.py  test_synchronous.py
tools/: pd_disaggregation_proxy_server.py
