[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "stopwatch"
version = "0.1.0"
requires-python = ">=3.11,<4.0"
dependencies = [
  "guidellm @ git+https://github.com/neuralmagic/guidellm.git#1261fe8",
  "modal~=1.1.2",
  "pytest~=8.4.1",
  "pytest-rerunfailures~=15.1",
  "pytest-xdist~=3.8.0",
  "requests~=2.32.4",
]
authors = [
  {name = "Jack Cook", email = "hello@jackcook.com"},
]
description = "A tool for benchmarking LLMs on Modal"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
keywords = ["machine-learning", "llms", "vllm", "sglang", "tensorrt-llm"]

[project.scripts]
stopwatch = "stopwatch.cli:app"

[project.urls]
Homepage = "https://github.com/modal-labs/stopwatch"
Documentation = "https://github.com/modal-labs/stopwatch/blob/main/README.md"
Repository = "https://github.com/modal-labs/stopwatch.git"

[tool.ruff]
line-length = 88
indent-width = 4
exclude = ["build", "dist", "env", ".venv"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
ignore = [
  "C901",
  "D100",
  "D104",
  "D202",
  "D203",
  "D205",
  "D212",
  "FIX002",
  "PD901",
  "PLC0415",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "S113",
  "TD003",
  "TRY002", # remove this one later
  "UP017", # sglang image uses python 3.10
]
select = [
  "ALL",
]

[tool.ruff.lint.extend-per-file-ignores]
"src/stopwatch/cli/*.py" = [
  "T201",
]
"src/stopwatch/llm_servers/*.py" = [
  "D101",
  "N801",
  "S104",
  "S602",
]
"src/stopwatch/run_benchmark.py" = [
  "D101",
  "N801",
]
"tests/**/test_*.py" = [
  "S101",  # Allow assert statements in tests
  "PLR2004",  # Allow constant values in tests
]
"tools/pd_disaggregation_proxy_server.py" = [
  "S104",
]
