[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "stopwatch"
version = "0.1.0"
requires-python = ">=3.10,<4.0"
dependencies = [
  "guidellm @ git+https://github.com/neuralmagic/guidellm.git#1261fe8",
  "modal~=1.1.3",
  "pytest~=8.4.1",
  "pytest-rerunfailures~=15.1",
  "pytest-timeout~=2.4.0",
  "pytest-xdist~=3.8.0",
  "requests~=2.32.5",
]
authors = [
  {name = "Jack Cook", email = "hello@jackcook.com"},
]
description = "A tool for benchmarking LLMs on Modal"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
keywords = ["machine-learning", "llms", "vllm", "sglang", "tensorrt-llm"]

[project.scripts]
stopwatch = "stopwatch.cli:app"

[project.urls]
Homepage = "https://github.com/modal-labs/stopwatch"
Documentation = "https://github.com/modal-labs/stopwatch/blob/main/README.md"
Repository = "https://github.com/modal-labs/stopwatch.git"

[tool.ruff]
line-length = 88
indent-width = 4
exclude = ["build", "dist", "env", ".venv"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
ignore = [
  # Various dumb rules related to docstrings
  "D100",
  "D104",
  "D202",
  "D203",
  "D205",
  "D212",

  "PLC0415",  # Allow imports that aren't at the top of the file
  "PLR0913",  # Allow functions with more than 5 arguments
  "S113",  # Allow requests without timeouts
  "UP017",  # Allow timezone.utc on the SGLang image, which uses Python 3.10
]
select = [
  "ALL",
]

[tool.ruff.lint.extend-per-file-ignores]
"src/stopwatch/cli/*.py" = [
  "T201",  # Allow print statements in CLI
]
"src/stopwatch/llm_servers/*.py" = [
  "N801",  # Allow class names to be lowercase
  "S104",  # Allow binding to all interfaces
  "S602",  # Allow subprocess.Popen with shell=True
]
"tests/**/test_*.py" = [
  "S101",  # Allow assert statements in tests
  "PLR2004",  # Allow constant values in tests
]